Fix panel window overflow

--- a/ember/app/styles/routes/index.scss
+++ b/ember/app/styles/routes/index.scss
@@ -3,6 +3,8 @@
   height: 100vh;
   width: 100%;
 
+  overflow: hidden;
+
   .search-wrapper {
     position: absolute;
     top: 5vh;
@@ -142,7 +144,7 @@
 
       .spinning-box {
         @extend ._spinner; 
-        $size: 16px;
+        $size: 15px;
 
         display: inline-block;
 
